# CommonLib

./: CMakeLists.txt  README.md  changelog.md
cmake/: grpc.cmake
include/common/: game_manager.h
include/sailgame/codenames/: msg_builder.h  word.h
include/sailgame/common/: core_msg_builder.h  event.h  event_loop.h  game_manager.h  network_interface.h  provider_msg_builder.h  state_machine.h  types.h  util.h
include/sailgame/uno/: card.h  msg_builder.h
src/: CMakeLists.txt
src/codenames/: CMakeLists.txt  msg_builder.cpp  word.cpp
src/common/: CMakeLists.txt  core_msg_builder.cc  provider_msg_builder.cc
src/texas/: CMakeLists.txt
src/uno/: CMakeLists.txt  card.cc  msg_builder.cc
